 --  Bug #662 - SIGSEGV in @dbck.
 --  Bug #618 - Logic in new_home enables being inside a garbage object.
 --  Bug #424 - Linking deposit refund. Patch from Jake.
 --  Bug #585 - Parent isn't cleared during @destroy process. Patch from Jake.
 --  Bug #765 - whispering to objects with ears should still be allowed.
 --  Bug #602 - fun_ansi reaches backwards into the buffer.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 --  The parser speed has been substantially increased: TinyExec() and 
     parse_to()
 --  Main networking loop is brief, to the point, and fast.
 --  Combined all the queues, do_second, dispatch, cache_tick, do_top, etc.
     and the way process_output and process_commands were scheduled into a 
     single unified mini-task design. Everything is now scheduled, or it 
     doesn't run.  @kick, @timewarp, @enable/disable queuing all still 
     work. The server will sleep until there is work to do or IO to 
     perform, otherwise, it will sleep for an arbitrarily long time (which 
     ight now is 5 minutes). The WinNT shovechars loop is now 12 lines long 
     (not counting blanks, braces, or comments). Alarm() has been removed 
     from the server. It caused the main networking loop to run once a 
     second regardless of whether there was anything on the queue to run or
     whether the status of any connections changes.
 --  Commands that are waiting on quota are now scheduled more fluidly.
 --  The interface for safe_copy_chr() and safe_copy_str() is now different 
     which was done to support a speed increase.
 --  Bread-and-butter dumping functions: putref, getref, putstring, and 
     getstring_noalloc have all been highly optimized for speed.
 --  Translate() and all handling of ANSI functions has been optimized in 
     terms of execution speed and also optimized in terms of using only 
     the minimal number of sequences to accomplish the color goal.
 --  ansi() is faster.